Updates chapter1.md
Auto commit by GitBook Editor